--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,60 @@
   text-align: center;
 }
 
+.JokeSpace {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.JokeFinder {
+  margin: 20px;
+  width: 40vw;
+}
+
+.JokeFinder .Joke {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100px;
+}
+
+.JokeFinder .Joke p{
+  width: 80%
+}
+
+.JokeFinder button {
+  height: 70px;  
+}
+
+.myJokes {
+  margin: 20px;
+  width: 40vw;
+  height: 820px;
+  overflow: scroll;
+}
+
+.editing, .displaying {
+  display: flex;
+  flex-direction: column;
+}
+
+.editing textarea{
+  outline: red dashed 3px;
+}
+
+.buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.myJokes textarea{
+  margin: 5px; 
+  height: auto;
+  width: 80%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
